--- a/pug/index.pug
+++ b/pug/index.pug
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-html
-    head
-        title Тайтл
-        meta(charset="utf-8")
-    body
-        p Абзац
+extends blocks/template.pug
+block vars
+    - var pageTitle="Главная"
+block header
+    include blocks/header.pug
+block content
+block footer
+
 
         
         
