начал заново делать макет, навбар для 320px, открывается через toggle jquery, накладывается на макет почти ровно.

--- a/pug/blocks/header.pug
+++ b/pug/blocks/header.pug
@@ -1,22 +1,25 @@
 header.header
-    .header__top-section
-        .header__logo
-            .header__logo-text B
-        .header__left-text 
-            a(href="#!") private banking
-        .header__left-text 
-            a(href="#!") О банке
-    .header__right-text
-        a(href="#!") Офисы и банкоматы
-    .header__right-text 
-        a(href="#!") En
-    .header__look
-            span.icon-Look
-    .header__search
-            span.icon-Search
-    .header__toggler
-            span.icon-menu
-    .header__tel 
-        a(href="tel:+74959568626") +7 (495) 956–86–26
-             
-
+    .header__logo B
+    .header__right-icons
+        span.icon-Search
+        span.icon-menu#icon-menu
+ul.header__menu
+    li.header__main-item
+        a(href="#!").header__main-item-dropdown Частным клиентам
+    li.header__main-item
+        a(href="#!").header__main-item-dropdown  Корпоративным клиентам
+    li.header__main-item
+        a(href="#!").header__main-item-dropdown  Услуги на рынке ценных бумаг
+    li.header__main-item
+        a(href="#!").header__main-item-dropdown  О банке
+    li.header__main-item 
+        a(href="#!") Private banking
+    li.header__main-item 
+        a(href="#!") Специальная версия для людей с ограниченными возможностями
+    li.header__main-item.tel 
+        a(href="#!").tel +7 495 956 86 26
+    
+                
+                    
+            
+        
