--- a/pug/blocks/template.pug
+++ b/pug/blocks/template.pug
@@ -9,3 +9,5 @@ html
     block header
     block content
     block footer
+    script(src="js/jquery-3.3.1.js")
+    script(src="js/header__toggler/header__toggler.js")
