--- a/sass/blocks/header.scss
+++ b/sass/blocks/header.scss
@@ -1,370 +1,101 @@
 @import "base/base";
 
-.header {
-    width: 100%;
-    background-color: $white;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-
-
-
-    //#############
-    @media screen and (max-width: 1920px) {
-        .header__logo {
-            margin-right: 51px;
-            margin-left: 375px;
-        }
-
-        .header__left-text {
-            letter-spacing: 0.05em;
-            padding-top: 25px;
-            text-transform: uppercase;
-            font-family: G-regular;
-            font-size: 12px;
-            white-space: nowrap;
-            padding-right: 48px;
-
-            a {
-                text-decoration: none;
-                color: $gray-darken-5;
-            }
-        }
-
-        .header__toggler {
-            display: none
-        }
-
-        .header__search {
-            display: none
-        }
-
-        .header__tel {
-            padding-top: 25px;
-            margin-right: 375px;
-            font-family: G-medium;
-            font-weight: 500;
-            font-size: 12px;
-            line-height: 12px;
-            white-space: nowrap;
-            letter-spacing: 0.05em;
-            margin-left: 20px;
-            a {
-                text-decoration: none;
-                color: $orange;
-            }
-        }
-
-
-        .header__look {
-            display: none;
-        }
-
-        .header__right-text {
-            letter-spacing: 0.05em;
-            padding-top: 25px;
-
-            a {
-                text-decoration: none;
-                color: $gray-darken-5;
-            }
-
-            text-transform: uppercase;
-            font-family: G-regular;
-            font-size: 12px;
-            padding-left: 36px;
-            white-space: nowrap
-        }
-    }
-
-    // ###############################
-    @media screen and (max-width: 1500px) {
-        .header__logo {
-            margin-right: 40px;
-            margin-left: 63px;
-        }
-
-        .header__left-text {
-            letter-spacing: 0.05em;
-            padding-top: 30px;
-            text-transform: uppercase;
-            font-family: G-regular;
-            font-size: 12px;
-            white-space: nowrap;
-            padding-right: 22px;
-
-            a {
-                text-decoration: none;
-                color: $gray-darken-5;
-            }
-        }
-
-        .header__toggler {
-            display: none
-        }
-
-        .header__search {
-            display: none
-        }
-
-        .header__tel {
-            padding-top: 30px;
-            margin-right: 63px;
-            font-family: G-medium;
-            font-weight: 500;
-            font-size: 12px;
-            line-height: 12px;
-            white-space: nowrap;
-
-            a {
-                text-decoration: none;
-                color: $orange;
-            }
-        }
-
-        .header__look {
-            padding-top: 30px;
-            padding-right: 21px;
-            padding-left: 21px;
-        }
-
-        .header__right-text {
-            margin-top: 30px;
-            letter-spacing: 0.05em;
-            padding-top: 0px;
-
-            a {
-                text-decoration: none;
-                color: $gray-darken-5;
-            }
-
-            text-transform: uppercase;
-            font-family: G-regular;
-            font-size: 12px;
-            padding-left: 25px;
-            white-space: nowrap
-        }
-    }
-
-
-
-    @media screen and (max-width: 1024px) {
-        .header__logo {
-            margin-right: 40px;
-            margin-left: 63px;
-        }
-
-        .header__left-text {
-            letter-spacing: 0.05em;
-            padding-top: 30px;
-            text-transform: uppercase;
-            font-family: G-regular;
-            font-size: 12px;
-            white-space: nowrap;
-            padding-right: 22px;
-
-            a {
-                text-decoration: none;
-                color: $gray-darken-5;
-            }
-        }
-
-        .header__toggler {
-            display: none
-        }
-
-        .header__search {
-            display: none
-        }
-
-        .header__tel {
-            padding-top: 30px;
-            margin-right: 63px;
-            font-family: G-medium;
-            font-weight: 500;
-            font-size: 12px;
-            line-height: 12px;
-            white-space: nowrap;
-            letter-spacing: 0.05em;
-
-            a {
-                text-decoration: none;
-                color: $orange;
-            }
-        }
-
-        .header__look {
-            display: block;
-            padding-top: 30px;
-            padding-right: 0px;
-            padding-left: 15px;
-        }
-
-        .header__right-text {
-            margin-top: 30px;
-            letter-spacing: 0.05em;
-            padding-top: 0px;
-
-            a {
-                text-decoration: none;
-                color: $gray-darken-5;
-            }
-
-            text-transform: uppercase;
-            font-family: G-regular;
-            font-size: 12px;
-            padding-left: 20px;
-            white-space: nowrap
-        }
-    }
-
-    @media screen and (max-width: 768px) {
-        .header__top-section {
-            height: 90px;
-        }
-
-        .header__left-text {
-            display: none
-        }
-
-        .header__tel {
-            display: none;
-        }
-
-        .header__toggler {
-            margin-top: 10px;
-            display: block;
-            margin-right: 93px;
-            padding-left: 20px
-        }
-
-        .header__search {
-            margin-top: 10px;
-            display: block;
-        }
-
-        .header__logo {
-            margin-left: 93px;
-        }
-
-        .header__look {
-            padding-top: 0;
-            margin-top: 10px;
-            display: block;
-            padding-left: 35px;
-            padding-right: 25px
-        }
-
-        .header__right-text {
-            padding-right: 5px;
-            letter-spacing: 0.05em;
-            margin-top: 10px;
-            text-transform: uppercase;
-            font-family: G-regular;
-            font-size: 12px;
-            white-space: nowrap;
-
-            a {
-                text-decoration: none;
-                color: $gray-darken-5;
-            }
-        }
-    }
-
-    @media screen and (max-width: 540px) {
-        .header__left-text {
-            display: none
-        }
-
-        .header__tel {
-            display: none;
-        }
-
-        .header__toggler {
-            display: block;
-            margin-right: 20px;
-            padding-left: 15px
-        }
-
-        .header__logo {
-            margin-left: 20px;
-        }
-
-        .header__look {
-            display: none
-        }
-
-        .header__right-text {
-            display: none
-        }
-
-        .header__top-section {
-            height: 70px;
-        }
-    }
-
-    @media screen and (max-width: 320px) {
-        .header__top-section {
-            height: 70px;
-        }
-
-        .header__left-text {
-            display: none
-        }
-
-        .header__tel {
-            display: none;
-        }
-
-        .header__toggler {
-            display: block;
-            margin-right: 20px;
-            padding-left: 15px
-        }
-
-        .header__logo {
-            margin-left: 20px;
-        }
-
-        .header__look {
-            display: none
-        }
-
-        .header__right-text {
-            display: none
-        }
-    }
-}
-
-
-.header__top-section {
-    width: 100%;
-    height: 75px;
-    display: flex;
-    align-items: center;
-
-}
-
 .header__logo {
-    height: 48px;
-    width: 48px;
-    margin-top: 15px;
-    margin-bottom: 15px;
-    border-radius: 50px;
-    background: $deep-blue;
     display: flex;
-    justify-content: center;
+    background-color: $deep-blue;
+    color: $white;
+    border-radius: 50px;
+    width: 48px;
+    height: 48px;
+    font-family: G-bold;
+    font-size: 30px;
     align-items: center;
+    justify-content: center;
+}
 
-    .header__logo-text {
-        margin-top: 2px;
-        margin-bottom: 2px;
-        height: 40px;
-        width: 20px;
-        font-family: G-bold;
-        font-size: 30px;
-        line-height: 40px;
-        color: $white;
+@media screen and (max-width: 320px) {
+    .header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        height: 70px;
+        background-color: $white;
+
+        .header__logo {
+            margin-left: 20px;
+        }
+
+        .header__right-icons {
+            margin-right: 20px;
+
+            .icon-Search {
+                padding-right: 15px;
+            }
+        }
+    }
+
+    .header__menu {
+        display: none;
+        list-style: none;
+        margin: 0;
+        padding: 0
+    }
+
+    .header__menu_show {
+        display: block
+    }
+
+    ul {
+        list-style: none;
+
+        li:first-child {
+            border-top: 1px solid $gray-darken-2;
+            padding-top: 24px;
+        }
+
+        .header__main-item {
+            background-color: $white;
+            border-bottom: 1px solid $gray-darken-2;
+            padding-left: 20px;
+            padding-top: 16px;
+            padding-bottom: 16px;
+            transition: 0.3s;
+
+            a {
+                font-family: G-medium;
+                font-size: 14px;
+                color: $black;
+                text-decoration: none;
+            }
+
+            a.tel {
+                color: $orange
+            }
+
+            a.header__main-item-dropdown::after {
+                font-family: iconsRR;
+                font-size: 7px;
+                padding-top: 4px;
+                position: absolute;
+                right: 20px;
+                content: "\e924";
+                color: $gray-darken-5;
+            }
+        }
+
+        li.tel {
+            padding-top: 35px;
+            padding-bottom: 27px;
+        }
+
+        .header__main-item:hover {
+            background-color: $deep-blue;
+            transition: 0.3s;
+
+            a {
+                color: $white;
+            }
+        }
     }
 }
