почти все на 26 ноября

--- a/pug/blocks/header.pug
+++ b/pug/blocks/header.pug
@@ -6,6 +6,26 @@ header.header
 ul.header__menu
     li.header__main-item
         a(href="#!").header__main-item-dropdown Частным клиентам
+                li.header__for-person-list-item 
+                    a Платежный сервис
+                li.header__for-person-list-item  
+                    a Монеты
+                li.header__for-person-list-item  
+                    a Вклады
+                li.header__for-person-list-item  
+                    a Банковские карты
+                li.header__for-person-list-item  
+                    a Кридитование физических лиц
+                li.header__for-person-list-item  
+                    a Операции с наличной иностранной валютой
+                li.header__for-person-list-item  
+                    a Тарифы
+                li.header__for-person-list-item  
+                    a Текущие счета
+                li.header__for-person-list-item 
+                    .top-img
+                        img(src="media/top4.png")
+                        
     li.header__main-item
         a(href="#!").header__main-item-dropdown  Корпоративным клиентам
     li.header__main-item
