--- a/sass/blocks/header.scss
+++ b/sass/blocks/header.scss
@@ -61,6 +61,10 @@
             padding-top: 16px;
             padding-bottom: 16px;
             transition: 0.3s;
+            font-family: G-medium;
+            font-size: 14px;
+            color: $black;
+            text-decoration: none;
 
             a {
                 font-family: G-medium;
@@ -76,7 +80,7 @@
             a.header__main-item-dropdown::after {
                 font-family: iconsRR;
                 font-size: 7px;
-                padding-top: 4px;
+                margin-top: 0px;
                 position: absolute;
                 right: 20px;
                 content: "\e924";
@@ -89,12 +93,24 @@
             padding-bottom: 27px;
         }
 
-        .header__main-item:hover {
-            background-color: $deep-blue;
-            transition: 0.3s;
+        .header__for-person-list-item {
+            display: block;
+            padding-left: 20px;
+            padding-top: 30px;
+            background-color: $white;
+            font-family: G-regular;
+            font-size: 14px;
+            color: $gray-darken-5;
 
-            a {
-                color: $white;
+            .top-img {
+                height: 180px;
+                width: 279px;
+                background-color: #CEDEEC;
+
+                img {
+                    margin-top: -20px;
+                    min-height: 200px;
+                }
             }
         }
     }
