Навбар под 320px готов

--- a/pug/blocks/header.pug
+++ b/pug/blocks/header.pug
@@ -4,28 +4,30 @@ header.header
         span.icon-Search
         span.icon-menu#icon-menu
 ul.header__menu
-    li.header__main-item
+    li.header__main-item#for-person
         a(href="#!").header__main-item-dropdown Частным клиентам
-                li.header__for-person-list-item 
-                    a Платежный сервис
-                li.header__for-person-list-item  
-                    a Монеты
-                li.header__for-person-list-item  
-                    a Вклады
-                li.header__for-person-list-item  
-                    a Банковские карты
-                li.header__for-person-list-item  
-                    a Кридитование физических лиц
-                li.header__for-person-list-item  
-                    a Операции с наличной иностранной валютой
-                li.header__for-person-list-item  
-                    a Тарифы
-                li.header__for-person-list-item  
-                    a Текущие счета
-                li.header__for-person-list-item 
-                    .top-img
-                        img(src="media/top4.png")
-                        
+    li.header__for-person-list-item 
+        a(href="#!") Платежный сервис
+    li.header__for-person-list-item  
+        a(href="#!") Монеты
+    li.header__for-person-list-item  
+        a(href="#!") Вклады
+    li.header__for-person-list-item  
+        a(href="#!") Банковские карты
+    li.header__for-person-list-item  
+        a(href="#!") Кридитование физических лиц
+    li.header__for-person-list-item  
+        a(href="#!") Операции с наличной иностранной валютой
+    li.header__for-person-list-item  
+        a(href="#!") Тарифы
+    li.header__for-person-list-item  
+        a(href="#!") Текущие счета
+    li.header__for-person-list-item 
+        .header__top-img
+             img(src="media/top4.png")
+        .header__img-text Интернет-банк для частных лиц
+        .request-container
+            .btn Подать заявку
     li.header__main-item
         a(href="#!").header__main-item-dropdown  Корпоративным клиентам
     li.header__main-item
@@ -36,8 +38,8 @@ ul.header__menu
         a(href="#!") Private banking
     li.header__main-item 
         a(href="#!") Специальная версия для людей с ограниченными возможностями
-    li.header__main-item.tel 
-        a(href="#!").tel +7 495 956 86 26
+    li.header__main-item.header__tel 
+        a(href="#!").header__tel +7 495 956 86 26
     
                 
                     
