--- a/sass/blocks/header.scss
+++ b/sass/blocks/header.scss
@@ -49,14 +49,9 @@
     ul {
         list-style: none;
 
-        li:first-child {
-            border-top: 1px solid $gray-darken-2;
-            padding-top: 24px;
-        }
-
         .header__main-item {
             background-color: $white;
-            border-bottom: 1px solid $gray-darken-2;
+            border-top: 1px solid $gray-darken-2;
             padding-left: 20px;
             padding-top: 16px;
             padding-bottom: 16px;
@@ -73,7 +68,7 @@
                 text-decoration: none;
             }
 
-            a.tel {
+            a.header__tel {
                 color: $orange
             }
 
@@ -88,13 +83,13 @@
             }
         }
 
-        li.tel {
+        li.header__tel {
             padding-top: 35px;
             padding-bottom: 27px;
         }
 
         .header__for-person-list-item {
-            display: block;
+            display: none;
             padding-left: 20px;
             padding-top: 30px;
             background-color: $white;
@@ -102,7 +97,14 @@
             font-size: 14px;
             color: $gray-darken-5;
 
-            .top-img {
+            a {
+                font-family: G-regular;
+                font-size: 14px;
+                color: $gray-darken-5;
+                text-decoration: none;
+            }
+
+            .header__top-img {
                 height: 180px;
                 width: 279px;
                 background-color: #CEDEEC;
@@ -112,6 +114,22 @@
                     min-height: 200px;
                 }
             }
+
+            .header__img-text {
+                padding-top: 12px;
+                padding-bottom: 12px;
+                font-family: G-medium;
+                color: $black
+            }
+
+            .request-container {
+                margin-right: 20px;
+                padding-bottom: 30px;
+            }
+        }
+
+        .header__for-person-list-item_show {
+            display: block;
         }
     }
 }
