Навбар под 320px готов

--- a/pug/blocks/header.pug
+++ b/pug/blocks/header.pug
@@ -5,7 +5,7 @@ header.header
         span.icon-menu#icon-menu
 ul.header__menu
     li.header__main-item#for-person
-        a(href="#!").header__main-item-dropdown Частным клиентам
+        a(href="#!").header__main-item-dropdown#for-person-dropdown Частным клиентам
     li.header__for-person-list-item 
         a(href="#!") Платежный сервис
     li.header__for-person-list-item  
@@ -26,7 +26,7 @@ ul.header__menu
         .header__top-img
              img(src="media/top4.png")
         .header__img-text Интернет-банк для частных лиц
-        .request-container
+        .header__request-container
             .btn Подать заявку
     li.header__main-item
         a(href="#!").header__main-item-dropdown  Корпоративным клиентам
