--- a/sass/blocks/header.scss
+++ b/sass/blocks/header.scss
@@ -80,6 +80,7 @@
                 right: 20px;
                 content: "\e924";
                 color: $gray-darken-5;
+                transition: 0.5s;
             }
         }
 
@@ -122,7 +123,7 @@
                 color: $black
             }
 
-            .request-container {
+            .header__request-container {
                 margin-right: 20px;
                 padding-bottom: 30px;
             }
@@ -130,6 +131,14 @@
 
         .header__for-person-list-item_show {
             display: block;
+        }
+        .header__for-person_active{
+            color: $deep-blue !important;
+        }
+        .header__for-person_active::after{
+            color: $deep-blue !important;
+            transform: rotate(180deg);
+            transition: 0.5s;
         }
     }
 }
