начал верстку под 768px

--- a/pug/blocks/header.pug
+++ b/pug/blocks/header.pug
@@ -1,45 +1,80 @@
 header.header
     .header__logo B
     .header__right-icons
+        .office
+            a(href="#!") Офисы и банкоматы
+        .lang
+            a(href="#!") EN
+        a(href="#!")
+            span.icon-Look
         span.icon-Search
         span.icon-menu#icon-menu
-ul.header__menu
-    li.header__main-item#for-person
-        a(href="#!").header__main-item-dropdown#for-person-dropdown Частным клиентам
-    li.header__for-person-list-item 
+.header__mobile-menu
+    ul.header__menu
+        li.header__main-item#for-person
+            a(href="#!").header__main-item-dropdown#for-person-dropdown Частным клиентам
+        li.header__for-person-list-item 
+            a(href="#!") Платежный сервис
+        li.header__for-person-list-item  
+            a(href="#!") Монеты
+        li.header__for-person-list-item  
+            a(href="#!") Вклады
+        li.header__for-person-list-item  
+            a(href="#!") Банковские карты
+        li.header__for-person-list-item  
+            a(href="#!") Кридитование физических лиц
+        li.header__for-person-list-item  
+            a(href="#!") Операции с наличной иностранной валютой
+        li.header__for-person-list-item  
+            a(href="#!") Тарифы
+        li.header__for-person-list-item  
+            a(href="#!") Текущие счета
+        li.header__for-person-list-item 
+            .header__top-img
+                 img(src="media/top4.png")
+            .header__img-text Интернет-банк для частных лиц
+            .header__request-container
+                a(href="#!").btn Подать заявку
+        li.header__main-item
+            a(href="#!").header__main-item-dropdown  Корпоративным клиентам
+        li.header__main-item
+            a(href="#!").header__main-item-dropdown  Услуги на рынке ценных бумаг
+        li.header__main-item
+            a(href="#!").header__main-item-dropdown  О банке
+        li.header__main-item 
+            a(href="#!") Private banking
+        li.header__main-item 
+            a(href="#!") Специальная версия для людей с ограниченными возможностями
+        li.header__main-item.header__tel 
+            a(href="tel:84959568626").header__tel +7 495 956 86 26
+.header__menu
+    ul.header__main-header-menu
+        li.header__main-header-menu-item
+            a(href="#!") Частным клиентам
+        li.header__main-header-menu-item
+            a(href="#!") Корпоративным клиентам
+        li.header__main-header-menu-item
+            a(href="#!") Услуги на ранке ценных бумаг
+.for-person-block
+ul.for-person-list
+    li.for-person-list-item
         a(href="#!") Платежный сервис
-    li.header__for-person-list-item  
-        a(href="#!") Монеты
-    li.header__for-person-list-item  
+    li.for-person-list-item
+        a(href="#!") Моенты
+    li.for-person-list-item
         a(href="#!") Вклады
-    li.header__for-person-list-item  
+    li.for-person-list-item
         a(href="#!") Банковские карты
-    li.header__for-person-list-item  
-        a(href="#!") Кридитование физических лиц
-    li.header__for-person-list-item  
+    li.for-person-list-item
+        a(href="#!") Кредитование физических лиц
+    li.for-person-list-item
         a(href="#!") Операции с наличной иностранной валютой
-    li.header__for-person-list-item  
+    li.for-person-list-item
         a(href="#!") Тарифы
-    li.header__for-person-list-item  
+    li.for-person-list-item
         a(href="#!") Текущие счета
-    li.header__for-person-list-item 
-        .header__top-img
-             img(src="media/top4.png")
-        .header__img-text Интернет-банк для частных лиц
-        .header__request-container
-            .btn Подать заявку
-    li.header__main-item
-        a(href="#!").header__main-item-dropdown  Корпоративным клиентам
-    li.header__main-item
-        a(href="#!").header__main-item-dropdown  Услуги на рынке ценных бумаг
-    li.header__main-item
-        a(href="#!").header__main-item-dropdown  О банке
-    li.header__main-item 
-        a(href="#!") Private banking
-    li.header__main-item 
-        a(href="#!") Специальная версия для людей с ограниченными возможностями
-    li.header__main-item.header__tel 
-        a(href="#!").header__tel +7 495 956 86 26
+        
+    
     
                 
                     
