--- a/sass/base/base.scss
+++ b/sass/base/base.scss
@@ -41,12 +41,12 @@ body {
         height: 45px;
     }
 }
-
+a{text-decoration: none}
 .btn {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: $white;
+    color: $white !important;
     text-decoration: none;
     user-select: none;
     background: $deep-blue;
