--- a/sass/blocks/header.scss
+++ b/sass/blocks/header.scss
@@ -13,7 +13,125 @@
     justify-content: center;
 }
 
-@media screen and (max-width: 320px) {
+//768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768
+@media screen and (max-width: 1024px) {
+    .header__mobile-menu {
+        display: none;
+    }
+
+    .header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        height: 90px;
+        background-color: $white;
+
+        .header__logo {
+            margin-left: 90px;
+        }
+
+        .header__right-icons {
+            margin-right: 90px;
+
+            .office {
+                padding-right: 25px;
+                display: inline-block;
+                font-family: G-regular;
+                color: $gray-darken-5 !important;
+                font-size: 12px;
+                letter-spacing: 0.05em;
+                text-transform: uppercase;
+
+                a {
+                    color: $gray-darken-5
+                }
+            }
+
+            .lang {
+                display: inline-block;
+                font-family: G-regular;
+                font-size: 12px;
+                letter-spacing: 0.05em;
+                padding-right: 35px;
+                text-transform: uppercase;
+
+                a {
+                    color: $gray-darken-5
+                }
+            }
+
+            .icon-Look {
+                padding-right: 20px;
+            }
+
+            .icon-Search {
+                padding-right: 20px;
+            }
+        }
+    }
+
+    .header__menu {
+        display: block;
+
+        ul.header__main-header-menu {
+            border-top: 1px solid $gray-darken-2;
+            border-bottom: 1px solid $gray-darken-2;
+            list-style: none;
+            background: $white;
+            display: flex;
+            justify-content: center;
+            font-family: G-medium;
+            font-size: 14px;
+
+            a {
+                color: $black
+            }
+
+            li.header__main-header-menu-item {
+                margin-right: 30px;
+                margin-top: 30px;
+                margin-bottom: 30px;
+            }
+        }
+    }
+
+    ul.for-person-list {
+        list-style: none;
+        background: $white;
+        justify-content: center;
+        font-family: G-regular;
+        font-size: 18px;
+        padding: 30px;
+        -moz-column-count: 2;
+        -webkit-column-count: 2;
+        column-count: 2;
+
+        li.for-person-list-item {
+            padding-top: 30px;
+
+            a {
+                color: $gray-darken-5;
+            }
+
+            a:hover {
+                color: $deep-blue;
+                transition: 0.5s
+            }
+        }
+    }
+}
+
+//320_320_320_320_320_320_320_320_320_320_320_320_320_320_320_320_320_320_320_320_320_320_320_320_320_320_320_320_320_320_320_320_320_320_320_320
+@media screen and (max-width: 768px) {
+    .header__mobile-menu {
+        display: block;
+    }
+
+    .header__menu {
+        display: none;
+    }
+
     .header {
         display: flex;
         justify-content: space-between;
@@ -28,6 +146,18 @@
 
         .header__right-icons {
             margin-right: 20px;
+
+            .office {
+                display: none;
+            }
+
+            .lang {
+                display: none;
+            }
+
+            .icon-Look {
+                display: none;
+            }
 
             .icon-Search {
                 padding-right: 15px;
@@ -92,7 +222,7 @@
         .header__for-person-list-item {
             display: none;
             padding-left: 20px;
-            padding-top: 30px;
+            padding-top: 20px;
             background-color: $white;
             font-family: G-regular;
             font-size: 14px;
@@ -132,10 +262,12 @@
         .header__for-person-list-item_show {
             display: block;
         }
-        .header__for-person_active{
+
+        .header__for-person_active {
             color: $deep-blue !important;
         }
-        .header__for-person_active::after{
+
+        .header__for-person_active::after {
             color: $deep-blue !important;
             transform: rotate(180deg);
             transition: 0.5s;
