начал верстку под 768px, переименовал по бэм

--- a/pug/blocks/header.pug
+++ b/pug/blocks/header.pug
@@ -55,25 +55,26 @@ header.header
             a(href="#!") Корпоративным клиентам
         li.header__main-header-menu-item
             a(href="#!") Услуги на ранке ценных бумаг
-.for-person-block
-ul.for-person-list
-    li.for-person-list-item
-        a(href="#!") Платежный сервис
-    li.for-person-list-item
-        a(href="#!") Моенты
-    li.for-person-list-item
-        a(href="#!") Вклады
-    li.for-person-list-item
-        a(href="#!") Банковские карты
-    li.for-person-list-item
-        a(href="#!") Кредитование физических лиц
-    li.for-person-list-item
-        a(href="#!") Операции с наличной иностранной валютой
-    li.for-person-list-item
-        a(href="#!") Тарифы
-    li.for-person-list-item
-        a(href="#!") Текущие счета
-        
+.header__for-person-block
+    ul.header__for-person-list
+        li.header__for-person-list-item
+            a(href="#!") Платежный сервис
+        li.header__for-person-list-item
+            a(href="#!") Моенты
+        li.header__for-person-list-item
+            a(href="#!") Вклады
+        li.header__for-person-list-item
+            a(href="#!") Банковские карты
+        li.header__for-person-list-item
+            a(href="#!") Кредитование физических лиц
+        li.header__for-person-list-item
+            a(href="#!") Операции с наличной иностранной валютой
+        li.header__for-person-list-item
+            a(href="#!") Тарифы
+        li.header__for-person-list-item
+            a(href="#!") Текущие счета
+    .s
+
     
     
                 
