почти доделал навбар для 768px

--- a/pug/blocks/header.pug
+++ b/pug/blocks/header.pug
@@ -35,8 +35,46 @@ header.header
             .header__img-text Интернет-банк для частных лиц
             .header__request-container
                 a(href="#!").btn Подать заявку
-        li.header__main-item
-            a(href="#!").header__main-item-dropdown  Корпоративным клиентам
+                
+                
+                
+        li.header__main-item#for-corp
+            a(href="#!").header__main-item-dropdown#for-corp-dropdown  Корпоративным клиентам
+        li.header__for-corp-list-item 
+            a(href="#!") Интернет-банк
+        li.header__for-corp-list-item  
+            a(href="#!") Рассчетно-кассовое обслуживание
+        li.header__for-corp-list-item  
+            a(href="#!") Как стать клиентом
+        li.header__for-corp-list-item  
+            a(href="#!") Кредитные сделки
+        li.header__for-corp-list-item  
+            a(href="#!") Тарифы
+        li.header__for-corp-list-item  
+            a(href="#!") Валютный контроль
+        li.header__for-corp-list-item  
+            a(href="#!") Управление проектного и структурного финансирования
+        li.header__for-corp-list-item  
+            a(href="#!") Корпоративное финансирование
+        li.header__for-corp-list-item  
+            a(href="#!") Организация операционно-кассового подразделения
+        li.header__for-corp-list-item  
+            a(href="#!") Войти в интернет-банк для юридических лиц
+        li.header__for-corp-list-item  
+            a(href="#!") Векселя
+        li.header__for-corp-list-item  
+            a(href="#!") Торговое финансирование и экспортно-импортные операции
+        li.header__for-corp-list-item  
+            a(href="#!") Инкассация 
+        li.header__for-corp-list-item 
+            .header__top-img-corp
+                 img(src="media/top5.png")
+            .header__img-text-corp Интернет-банк для юридических лиц
+            .header__request-container
+                a(href="#!").btn Подать заявку
+        
+        
+        
         li.header__main-item
             a(href="#!").header__main-item-dropdown  Услуги на рынке ценных бумаг
         li.header__main-item
@@ -49,8 +87,8 @@ header.header
             a(href="tel:84959568626").header__tel +7 495 956 86 26
 .header__menu
     ul.header__main-header-menu
-        li.header__main-header-menu-item
-            a(href="#!") Частным клиентам
+        li.header__main-header-menu-item#for-person-tablet
+            a(href="#!")#for-person-tablet-link Частным клиентам
         li.header__main-header-menu-item
             a(href="#!") Корпоративным клиентам
         li.header__main-header-menu-item
@@ -60,7 +98,7 @@ header.header
         li.header__for-person-list-item
             a(href="#!") Платежный сервис
         li.header__for-person-list-item
-            a(href="#!") Моенты
+            a(href="#!") Монeты
         li.header__for-person-list-item
             a(href="#!") Вклады
         li.header__for-person-list-item
@@ -73,9 +111,18 @@ header.header
             a(href="#!") Тарифы
         li.header__for-person-list-item
             a(href="#!") Текущие счета
-    .s
-
-    
+    .header__signIn-container
+        .header__signInimage
+            .header__top-img
+                img(src="media/top4.png" alt="Войти в личный каинет" title="Войти в личный кабинет")
+        .header__signIn
+            .header__signIn-text Интернет-банк для частных лиц
+            a.btn Войти в личный кабинет
+    .header__about-bank-container
+        .header__title-about
+            a(href="#!") О банке
+            i
+            
     
                 
                     
