--- a/sass/blocks/header.scss
+++ b/sass/blocks/header.scss
@@ -32,7 +32,8 @@
         }
 
         .header__right-icons {
-            margin-right: 90px;
+            margin-right: 95px;
+            padding-top: 5px;
 
             .office {
                 padding-right: 25px;
@@ -53,7 +54,7 @@
                 font-family: G-regular;
                 font-size: 12px;
                 letter-spacing: 0.05em;
-                padding-right: 35px;
+                padding-right: 45px;
                 text-transform: uppercase;
 
                 a {
@@ -72,7 +73,7 @@
     }
 
     .header__menu {
-        display: block;
+        display: none;
 
         ul.header__main-header-menu {
             border-top: 1px solid $gray-darken-2;
@@ -96,19 +97,25 @@
         }
     }
 
+    .header__menu_show {
+        display: block;
+    }
+
     ul.header__for-person-list {
         list-style: none;
         background: $white;
         justify-content: center;
         font-family: G-regular;
         font-size: 18px;
-        padding: 30px;
+        column-gap: 30px;
         -moz-column-count: 2;
         -webkit-column-count: 2;
         column-count: 2;
+        margin-left: 90px;
+        margin-right: 90px;
 
         li.header__for-person-list-item {
-            padding-top: 30px;
+            padding-top: 22px;
 
             a {
                 color: $gray-darken-5;
@@ -119,6 +126,90 @@
                 transition: 0.5s
             }
         }
+    }
+
+    .header__for-person-block {
+        display: none;
+        background: $white;
+
+        .header__signIn-container {
+            display: flex;
+            justify-content: center;
+
+            .header__top-img {
+                height: 140px;
+                width: 279px;
+                background-color: #CEDEEC;
+                margin-top: 90px;
+                margin-right: 30px;
+
+                img {
+                    margin-top: -40px;
+                    margin-left: 5px;
+                    min-height: 180px;
+                }
+            }
+
+            .header__signIn {
+                margin-top: 95px;
+                font-family: G-medium;
+                font-size: 18px;
+
+                .header__signIn-text {
+                    width: 55%;
+                    line-height: 25px;
+                    margin-bottom: 15px;
+                }
+            }
+        }
+
+        .header__about-bank-container {
+            margin-top: 30px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            .header__title-about {
+                display: flex;
+                flex-basis: 100%;
+                border-top: 1px solid $gray-darken-2;
+                border-bottom: 1px solid $gray-darken-2;
+                margin-left: 90px;
+                margin-right: 90px;
+                padding-top: 25px;
+                padding-bottom: 25px;
+                margin-bottom: 266px;
+                justify-content: space-between;
+                font-size: 18px;
+
+                    a {
+                        color: $black;
+                        font-family: G-medium;
+                        display: flex;
+                        flex-basis: 100%;
+                }
+                        i::after {
+                            font-family: iconsRR;
+                            font-size: 7px;
+                            content: "\e924";
+                            color: $black;
+                            transition: 0.5s;
+                            font-style: normal;
+                        }
+                    
+                
+
+
+            }
+        }
+    }
+
+    .header__for-person-block_show {
+        display: block;
+    }
+
+    .header__for-person_active {
+        color: $deep-blue !important;
     }
 }
 
@@ -236,17 +327,59 @@
             }
 
             .header__top-img {
-                height: 180px;
+                margin-top: 10px;
+                height: 150px;
                 width: 279px;
                 background-color: #CEDEEC;
 
                 img {
-                    margin-top: -20px;
-                    min-height: 200px;
+                    margin-top: -30px;
+                    min-height: 180px;
                 }
             }
 
             .header__img-text {
+                padding-top: 12px;
+                padding-bottom: 12px;
+                font-family: G-medium;
+                color: $black
+            }
+
+            .header__request-container {
+                margin-right: 20px;
+                padding-bottom: 30px;
+            }
+        }
+
+        .header__for-corp-list-item {
+            display: none;
+            padding-left: 20px;
+            padding-top: 20px;
+            background-color: $white;
+            font-family: G-regular;
+            font-size: 14px;
+            color: $gray-darken-5;
+
+            a {
+                font-family: G-regular;
+                font-size: 14px;
+                color: $gray-darken-5;
+                text-decoration: none;
+            }
+
+            .header__top-img-corp {
+                margin-top: 10px;
+                height: 150px;
+                width: 279px;
+                background-color: #CFE6E5;
+
+                img {
+                    margin-top: -40px;
+                    height: 190px;
+                }
+            }
+
+            .header__img-text-corp {
                 padding-top: 12px;
                 padding-bottom: 12px;
                 font-family: G-medium;
@@ -272,8 +405,24 @@
             transform: rotate(180deg);
             transition: 0.5s;
         }
+
+        .header__for-corp-list-item_show {
+            display: block;
+        }
+
+        .header__for-corp_active {
+            color: $deep-blue !important;
+        }
+
+        .header__for-corp_active::after {
+            color: $deep-blue !important;
+            transform: rotate(180deg);
+            transition: 0.5s;
+        }
+
     }
-    .header__for-person-block{
+
+    .header__for-person-block {
         display: none;
     }
 }
