--- a/sass/blocks/header.scss
+++ b/sass/blocks/header.scss
@@ -13,10 +13,298 @@
     justify-content: center;
 }
 
+//1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_1024_
+@media screen and (max-width: 1920px) {
+    .header__mobile-menu {
+        display: none;
+    }
+
+    .header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        height: 75px;
+        background-color: $white;
+
+        .header__logo {
+            margin-left: 65px;
+        }
+
+        .header__left-text {
+            display: flex;
+            align-items: center;
+
+            a {
+                display: inline-block;
+                font-family: G-regular;
+                font-size: 12px;
+                letter-spacing: 0.05em;
+                padding-right: 20px;
+                text-transform: uppercase;
+                color: $gray-darken-5;
+            }
+
+            .header__banking_desktop {
+                padding-left: 30px;
+                          padding-top: 25px;
+            }
+
+            .header__about-bank_desktop {
+                padding-left: 12px;
+                          padding-top: 25px;
+            }
+        }
+
+        .header__right-icons {
+            margin-right: 65px;
+            padding-top: 25px;
+
+            .header__tel-desktop {
+                display: inline;
+                color: $orange;
+                font-family: G-medium;
+                font-size: 12px;
+                letter-spacing: 0.05em;
+            }
+
+            .office {
+                padding-right: 20px;
+                display: inline-block;
+                font-family: G-regular;
+                color: $gray-darken-5 !important;
+                font-size: 12px;
+                letter-spacing: 0.05em;
+                text-transform: uppercase;
+
+                a {
+                    color: $gray-darken-5
+                }
+            }
+
+            .lang {
+                display: inline-block;
+                font-family: G-regular;
+                font-size: 12px;
+                letter-spacing: 0.05em;
+                padding-right: 20px;
+                text-transform: uppercase;
+
+                a {
+                    color: $gray-darken-5
+                }
+            }
+
+            .icon-Look {
+                padding-right: 30px;
+            }
+
+            .icon-Search {
+                display: none;
+            }
+
+            .icon-menu {
+                display: none;
+            }
+        }
+    }
+
+    .header__menu {
+        display: block;
+
+        .header__for-person-block_show {
+            display: block;
+        }
+
+        .header__inline {
+            display: flex;
+
+        }
+
+        ul.header__main-header-menu {
+            border-top: 1px solid $gray-darken-2;
+            border-bottom: 1px solid $gray-darken-2;
+            list-style: none;
+            background: $white;
+            display: flex;
+            justify-content: flex-start;
+            font-family: G-medium;
+            font-size: 14px;
+
+            a {
+                color: $black
+            }
+
+            li:first-child {
+                margin-left: 65px;
+            }
+
+            li.header__main-header-menu-item {
+                margin-right: 50px;
+                margin-top: 23px;
+                margin-bottom: 23px;
+            }
+        }
+    }
+
+    ul.header__for-person-list {
+        padding-left: 65px;
+        display: inline-block;
+        column-gap: 70px;
+        margin-top: 26px;
+        list-style: none;
+        -moz-column-count: 2;
+        -webkit-column-count: 2;
+        column-count: 2;
+        margin-right: 66px;
+        li.header__for-person-list-item {
+            padding-top: 18px;
+            display: flex;
+            a {
+                color: $gray-darken-5;
+                font-size: 18px;
+                font-family: G-regular;
+            }
+
+            a:hover {
+                color: $deep-blue;
+                transition: 0.5s
+            }
+        }
+    }
+
+    .header__for-person-block {
+        display: none;
+        background: $white;
+
+        .header__signIn-container {
+            display: block;
+            margin-bottom: 35px;
+            margin-right: 35px;
+            .header__top-img {
+                height: 140px;
+                width: 279px;
+                background-color: #CEDEEC;
+                margin-top: 45px;
+                margin-right: 30px;
+
+                img {
+                    margin-top: -40px;
+                    margin-left: 5px;
+                    min-height: 180px;
+                }
+            }
+
+            .header__signIn {
+                margin-top: 12px;
+                font-family: G-medium;
+                font-size: 14px;
+                max-width: 279px;
+                .header__signIn-text {
+                    line-height: 25px;
+                    margin-bottom: 15px;
+                }
+            }
+        }
+
+        .header__about-bank-container {
+            margin-top: 30px;
+            display: block;
+
+            .header__title-about {
+                display: block;
+                border-top: 1px solid $gray-darken-2;
+                border-bottom: none;
+                margin-left: 65px;
+                margin-right: 65px;
+                padding-top: 0px;
+                margin-bottom: 30px;
+
+                a {
+                    font-family: G-medium;
+                    font-size: 18px;
+                    color: $black;
+                }
+
+                a.header__about-bank-drop {
+                    display: flex;
+                    padding-top: 45px;
+                }
+
+                a.header__about-bank-drop:after {
+                    font-family: iconsRR;
+                    font-size: 7px;
+                    margin-top: 0px;
+                    position: absolute;
+                    right: 90px;
+                    content: "";
+                    color: $black;
+                    transition: 0.5s;
+                }
+
+                a.header__about-bank-drop_active:after {
+                    font-family: iconsRR;
+                    font-size: 7px;
+                    margin-top: 0px;
+                    position: absolute;
+                    right: 90px;
+                    content: "";
+                    color: $black;
+                    transition: 0.5s;
+                    transform: rotate(180deg);
+                }
+
+                .header__about-bank-list {
+                    display: inline-block;
+                    column-gap: 70px;
+                    margin-top: 0px;
+                    list-style: none;
+                    -moz-column-count: 2;
+                    -webkit-column-count: 2;
+                    column-count: 2;
+
+                    li {
+                        padding-top: 22px;
+                    }
+
+                    a {
+                        color: $gray-darken-5;
+                        font-family: G-regular;
+                    }
+                }
+
+                .header__about-bank-list_show {
+                    display: block;
+                }
+            }
+        }
+
+        .header__contacts {
+            margin-top:1px;
+            min-height: 1px;
+            .private {
+display:  none;
+            }
+
+            .tel {
+                display: none
+            }
+        }
+    }
+}
+
 //768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768_768
 @media screen and (max-width: 1023px) {
     .header__mobile-menu {
         display: none;
+    }
+
+    .header__banking_desktop {
+        display: none;
+    }
+
+    .header__about-bank_desktop {
+        display: none
     }
 
     .header {
@@ -34,6 +322,10 @@
         .header__right-icons {
             margin-right: 95px;
             padding-top: 5px;
+
+            .header__tel-desktop {
+                display: none;
+            }
 
             .office {
                 padding-right: 25px;
@@ -68,6 +360,11 @@
 
             .icon-Search {
                 padding-right: 20px;
+                display: inline-block;
+            }
+
+            .icon-menu {
+                display: inline-block;
             }
         }
     }
@@ -84,15 +381,20 @@
             justify-content: center;
             font-family: G-medium;
             font-size: 14px;
+            padding-left: 35px;
+            li:first-child {
+                margin-left: 0px;
+
+            }
 
             a {
                 color: $black
             }
 
             li.header__main-header-menu-item {
-                margin-right: 30px;
                 margin-top: 30px;
                 margin-bottom: 30px;
+                margin-right: 35px;
             }
         }
     }
@@ -101,22 +403,27 @@
         display: block;
     }
 
+    .header__inline {
+        display: flex;
+        flex-direction: column;
+    }
+
     ul.header__for-person-list {
         list-style: none;
         background: $white;
         justify-content: center;
         font-family: G-regular;
         font-size: 18px;
-        column-gap: 30px;
         -moz-column-count: 2;
         -webkit-column-count: 2;
         column-count: 2;
-        margin-left: 90px;
+        column-gap: 0px;
         margin-right: 90px;
-
+        margin-top: 0px;
         li.header__for-person-list-item {
             padding-top: 22px;
-
+                    padding-left: 25px;
+             display: block;
             a {
                 color: $gray-darken-5;
             }
@@ -135,14 +442,13 @@
         .header__signIn-container {
             display: flex;
             justify-content: center;
-
+            
             .header__top-img {
                 height: 140px;
                 width: 279px;
                 background-color: #CEDEEC;
                 margin-top: 90px;
-                margin-right: 30px;
-
+                margin-left: 50px;
                 img {
                     margin-top: -40px;
                     margin-left: 5px;
@@ -154,7 +460,7 @@
                 margin-top: 95px;
                 font-family: G-medium;
                 font-size: 18px;
-
+                margin-right: 18px;
                 .header__signIn-text {
                     width: 55%;
                     line-height: 25px;
@@ -164,9 +470,9 @@
         }
 
         .header__about-bank-container {
-            margin-top: 30px;
+            margin-top: 0px;
             display: block;
-
+            margin-top: -30px;
             .header__title-about {
                 display: block;
                 border-top: 1px solid $gray-darken-2;
@@ -176,15 +482,19 @@
                 padding-top: 25px;
                 padding-bottom: 25px;
                 margin-bottom: 266px;
+                margin-top: 30px;
 
                 a {
                     font-family: G-medium;
                     font-size: 18px;
                     color: $black;
                 }
-                a.header__about-bank-drop{
+
+                a.header__about-bank-drop {
                     display: flex;
+                    padding-top: 0px;
                 }
+
                 a.header__about-bank-drop:after {
                     font-family: iconsRR;
                     font-size: 7px;
@@ -195,6 +505,7 @@
                     color: $black;
                     transition: 0.5s;
                 }
+
                 a.header__about-bank-drop_active:after {
                     font-family: iconsRR;
                     font-size: 7px;
@@ -209,15 +520,14 @@
 
                 .header__about-bank-list {
                     display: none;
-                    margin-top: 26px;
+                    column-gap: 75px;
+                    margin-top: 0px;
                     list-style: none;
-                    column-gap: 30px;
                     -moz-column-count: 2;
                     -webkit-column-count: 2;
                     column-count: 2;
-
                     li {
-                        line-height: 40px;
+                        padding-top: 20px;
                     }
 
                     a {
@@ -225,8 +535,9 @@
                         font-family: G-regular;
                     }
                 }
-                .header__about-bank-list_show{
-                    display: block;
+
+                .header__about-bank-list_show {
+                    display: inline-block;
                 }
             }
         }
@@ -275,6 +586,14 @@
         display: none;
     }
 
+    .header__banking_desktop {
+        display: none;
+    }
+
+    .header__about-bank_desktop {
+        display: none
+    }
+
     .header {
         display: flex;
         justify-content: space-between;
@@ -290,6 +609,10 @@
         .header__right-icons {
             margin-right: 20px;
 
+            .header__tel-desktop {
+                display: none;
+            }
+
             .office {
                 display: none;
             }
@@ -304,6 +627,11 @@
 
             .icon-Search {
                 padding-right: 15px;
+                display: inline-block;
+            }
+
+            .icon-menu {
+                display: inline-block;
             }
         }
     }
